src/compiler_frontend/syntax_errors/tests/mod.rs
//! Unit tests for syntax-error common-mistake detection.

mod expression_tests;
mod signature_tests;
mod statement_tests;
